# api/api/openapi.yaml
@@ -14,6 +14,8 @@ externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 servers:
+- url: https://virtserver.swaggerhub.com/JoaoSeque1ra/produtosPereciveis/1.0.0
+  description: SwaggerHub API Auto Mocking
 - url: /
 tags:
 - name: produto
@@ -53,6 +55,13 @@ paths:
       responses:
         "200":
           description: Produto adicionado com sucesso
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Produto'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Produto'
         "400":
           description: Request body do produto invalido
         "401":
@@ -111,6 +120,13 @@ paths:
       responses:
         "200":
           description: Produto atualizado com sucesso
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Produto'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Produto'
         "400":
           description: Erro na atualização do produto
         "404":
@@ -164,7 +180,7 @@ paths:
         "404":
           description: Não existem produtos na base dados
       x-swagger-router-controller: Produto
-  /produto/findByCategoria/{categoriaId}:
+  /produto/findByCategoria/{categoria}:
     get:
       tags:
       - produto
@@ -172,13 +188,18 @@ paths:
       description: Múltiplos produtos enviados consoante a categoria selecionada
       operationId: getProdutoByCategoria
       parameters:
-      - name: categoriaId
+      - name: categoria
         in: path
         description: É necessário o envio da categoria para puder ser enviado a lista
           de produtos correta
         required: true
+        style: simple
+        explode: true
         schema:
-          type: integer
+          type: array
+          items:
+            type: string
+            default: todos
       responses:
         "200":
           description: Lista de produtos enviado consoante a categoria
@@ -258,7 +279,9 @@ paths:
         style: simple
         explode: true
         schema:
-          type: integer
+          type: array
+          items:
+            type: string
       responses:
         "200":
           description: Enviada a lista com sucesso
@@ -302,6 +325,13 @@ paths:
       responses:
         "200":
           description: Utilizador logado com sucesso
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Utilizador'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Utilizador'
         "400":
           description: Utilizador invalido
       x-swagger-router-controller: Utilizador
@@ -326,15 +356,28 @@ paths:
         "400":
           description: Erro na criacao de um utilizador
       x-swagger-router-controller: Utilizador
-  /utilizador/logout:
+  /utilizador/{email}/logout:
     get:
       tags:
       - utilizador
       summary: Logout do utilizador
       operationId: logoutUtilizador
+      parameters:
+      - name: email
+        in: path
+        description: Necessário enviar o email do utilizador pretendido
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
       responses:
         "200":
           description: Logout efetuado com sucesso
+        "400":
+          description: Input invalido
+        "404":
+          description: Utilizador não existe
       security:
       - bearerAuth: []
       x-swagger-router-controller: Utilizador
@@ -370,6 +413,49 @@ paths:
       security:
       - bearerAuth: []
       x-swagger-router-controller: Utilizador
+    put:
+      tags:
+      - utilizador
+      summary: Atualiza um utilizador
+      description: "Atualiza um utilizador, com base no requestBody"
+      operationId: putUtilizador
+      parameters:
+      - name: email
+        in: path
+        description: email do utilizador necessário
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Utilizador'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/Utilizador'
+        required: true
+      responses:
+        "200":
+          description: Utilizador atualizado
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Utilizador'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Utilizador'
+        "400":
+          description: Input invalido
+        "403":
+          description: Sem autorização
+        "404":
+          description: Utilizador não existe
+      security:
+      - bearerAuth: []
+      x-swagger-router-controller: Utilizador
     delete:
       tags:
       - utilizador
@@ -398,8 +484,8 @@ paths:
     patch:
       tags:
       - utilizador
-      summary: Updated utilizador
-      description: So consegue ser realizado por um utilizador logado
+      summary: Updated utilizador do tipo de utilizador
+      description: Atualizar um tipo de utilizador
       operationId: patchUtilizador
       parameters:
       - name: email
@@ -414,14 +500,21 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Utilizador'
+              $ref: '#/components/schemas/UtilizadorChangeTipo'
           application/xml:
             schema:
-              $ref: '#/components/schemas/Utilizador'
+              $ref: '#/components/schemas/UtilizadorChangeTipo'
         required: true
       responses:
         "200":
           description: Atualizado utilizador com sucesso
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UtilizadorChangeTipo'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/UtilizadorChangeTipo'
         "400":
           description: Erro ao atualizar
         "404":
@@ -492,8 +585,8 @@ components:
         produtoId: 0
         percentagemDesconto: 0.23021358869347652298387174596427939832210540771484375
         data:
-          dataValidade: 29/12/2012
-          dataProducao: 29/12/2012
+          dataValidade: dataValidade
+          dataProducao: dataProducao
           id: 7
         categoria:
           name: name
@@ -508,7 +601,7 @@ components:
         nutricaoPontuacao: nutricaoPontuacao
         informacaoNutricional:
           hidratosDeCarbono: 0.1231513536777255612975068288506008684635162353515625
-          peso: 1
+          peso: 0
           energia: 0.2027123023002321833274663731572218239307403564453125
           saturados: 0.7386281948385884366103937281877733767032623291015625
           proteina: 0.1489415909854170383397331534069962799549102783203125
@@ -636,7 +729,7 @@ components:
           format: double
       example:
         hidratosDeCarbono: 0.1231513536777255612975068288506008684635162353515625
-        peso: 1
+        peso: 0
         energia: 0.2027123023002321833274663731572218239307403564453125
         saturados: 0.7386281948385884366103937281877733767032623291015625
         proteina: 0.1489415909854170383397331534069962799549102783203125
@@ -662,8 +755,8 @@ components:
           pattern: ^(((0[1-9]|[12][0-9]|3[01])[- /.](0[13578]|1[02])|(0[1-9]|[12][0-9]|30)[- /.](0[469]|11)|(0[1-9]|1\d|2[0-8])[- /.]02)[- /.]\d{4}|29[- /.]02[- /.](\d{2}(0[48]|[2468][048]|[13579][26])|([02468][048]|[1359][26])00))$
           type: string
       example:
-        dataValidade: "29/12/2022"
-        dataProducao: "29/12/2022"
+        dataValidade: dataValidade
+        dataProducao: dataProducao
         id: 7
       xml:
         name: data
@@ -742,14 +835,8 @@ components:
       - email
       - nome
       - password
-      - tipo
       type: object
       properties:
-        tipo:
-          type: string
-          enum:
-          - utilizador
-          - admin
         nome:
           type: string
         apelido:
@@ -764,14 +851,25 @@ components:
           pattern: "[9]{1}[0-9]{2}[0-9]{3}[0-9]{3}$"
           type: string
       example:
-        tipo: utilizador
         password: password
-        contacto: "910933857"
+        contacto: contacto
         apelido: apelido
         nome: nome
         email: user@exemple.com
       xml:
         name: Utilizador
+    UtilizadorChangeTipo:
+      required:
+      - tipo
+      type: object
+      properties:
+        tipo:
+          type: string
+          enum:
+          - utilizador
+          - admin
+      example:
+        tipo: utilizador
     Login:
       required:
       - email
@@ -839,7 +937,7 @@ components:
           nutricaoPontuacao: nutricaoPontuacao
           informacaoNutricional:
             hidratosDeCarbono: 0.1231513536777255612975068288506008684635162353515625
-            peso: 1
+            peso: 0
             energia: 0.2027123023002321833274663731572218239307403564453125
             saturados: 0.7386281948385884366103937281877733767032623291015625
             proteina: 0.1489415909854170383397331534069962799549102783203125
