# api/controllers/Produto.js
@@ -3,7 +3,7 @@
 var utils = require('../utils/writer.js');
 var Produto = require('../service/ProdutoService');
 
-module.exports.deleteProduto = function deleteProduto(req, res, next, produtoId) {
+module.exports.deleteProduto = function deleteProduto (req, res, next, produtoId) {
   Produto.deleteProduto(produtoId)
     .then(function (response) {
       utils.writeJson(res, response);
@@ -13,7 +13,7 @@ module.exports.deleteProduto = function deleteProduto(req, res, next, produtoId)
     });
 };
 
-module.exports.getListPrecoMedio = function getListPrecoMedio(req, res, next) {
+module.exports.getListPrecoMedio = function getListPrecoMedio (req, res, next) {
   Produto.getListPrecoMedio()
     .then(function (response) {
       utils.writeJson(res, response);
@@ -23,7 +23,7 @@ module.exports.getListPrecoMedio = function getListPrecoMedio(req, res, next) {
     });
 };
 
-module.exports.getListProdutos = function getListProdutos(req, res, next) {
+module.exports.getListProdutos = function getListProdutos (req, res, next) {
   Produto.getListProdutos()
     .then(function (response) {
       utils.writeJson(res, response);
@@ -33,7 +33,7 @@ module.exports.getListProdutos = function getListProdutos(req, res, next) {
     });
 };
 
-module.exports.getListProdutosNaoDesperdicados = function getListProdutosNaoDesperdicados(req, res, next) {
+module.exports.getListProdutosNaoDesperdicados = function getListProdutosNaoDesperdicados (req, res, next) {
   Produto.getListProdutosNaoDesperdicados()
     .then(function (response) {
       utils.writeJson(res, response);
@@ -43,7 +43,7 @@ module.exports.getListProdutosNaoDesperdicados = function getListProdutosNaoDesp
     });
 };
 
-module.exports.getListarAssociarProdutoUtilizador = function getListarAssociarProdutoUtilizador(req, res, next, utilizadorId) {
+module.exports.getListarAssociarProdutoUtilizador = function getListarAssociarProdutoUtilizador (req, res, next, utilizadorId) {
   Produto.getListarAssociarProdutoUtilizador(utilizadorId)
     .then(function (response) {
       utils.writeJson(res, response);
@@ -53,7 +53,7 @@ module.exports.getListarAssociarProdutoUtilizador = function getListarAssociarPr
     });
 };
 
-module.exports.getProduto = function getProduto(req, res, next, produtoId) {
+module.exports.getProduto = function getProduto (req, res, next, produtoId) {
   Produto.getProduto(produtoId)
     .then(function (response) {
       utils.writeJson(res, response);
@@ -63,7 +63,7 @@ module.exports.getProduto = function getProduto(req, res, next, produtoId) {
     });
 };
 
-module.exports.getProdutoByCategoria = function getProdutoByCategoria(req, res, next, categoria) {
+module.exports.getProdutoByCategoria = function getProdutoByCategoria (req, res, next, categoria) {
   Produto.getProdutoByCategoria(categoria)
     .then(function (response) {
       utils.writeJson(res, response);
@@ -73,7 +73,7 @@ module.exports.getProdutoByCategoria = function getProdutoByCategoria(req, res, 
     });
 };
 
-module.exports.postAssociarProdutoCliente = function postAssociarProdutoCliente(req, res, next, body) {
+module.exports.postAssociarProdutoCliente = function postAssociarProdutoCliente (req, res, next, body) {
   Produto.postAssociarProdutoCliente(body)
     .then(function (response) {
       utils.writeJson(res, response);
@@ -83,7 +83,7 @@ module.exports.postAssociarProdutoCliente = function postAssociarProdutoCliente(
     });
 };
 
-module.exports.postProduto = function postProduto(req, res, next, body) {
+module.exports.postProduto = function postProduto (req, res, next, body) {
   Produto.postProduto(body)
     .then(function (response) {
       utils.writeJson(res, response);
@@ -93,7 +93,7 @@ module.exports.postProduto = function postProduto(req, res, next, body) {
     });
 };
 
-module.exports.putProduto = function putProduto(req, res, next, body, produtoId) {
+module.exports.putProduto = function putProduto (req, res, next, body, produtoId) {
   Produto.putProduto(body, produtoId)
     .then(function (response) {
       utils.writeJson(res, response);
